k8s/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aim-duel
  labels:
    app.kubernetes.io/name: aim-duel
    app.kubernetes.io/part-of: aim-duel
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: aim-duel
  ports:
    - name: http
      port: 80
      targetPort: http
